# documentation

./: .gitignore  404.html  README.md  _bookdown.yml  _output.yml  build.R  build.bat  build.sh  index.Rmd  intro.html  preamble.tex  style.css
chapters/: 01_introduction.Rmd  05_atlas_exports.Rmd  10_atlas_GBIF.Rmd  25_crossborderStech.Rmd  45_museumRoztoky.Rmd
chapters/cloningDb/: 01_delete_db_content.sql
chapters/museumChecker/: .gitignore  check_values.py  pyproject.toml
chapters/openrefineRecipes/: DwCGBIF2Pladias.json
docs/: 404.html  base-query-that-imitates-the-gui-search-form-results.html  basic-facts-about-pladias.html  exports-of-occurrence-data.html  gbif-interactions.html  how-is-gbif-import-done-by-admin.html  index.html  introduction.html  occurrence-data.html  occurrence-status-including-aggregated-descendant-taxa-parent_id-is-the-taxon-to-be-reported-inlcuding-records-linked-to-itself-all-descendant-taxa.html  quantitative-description-of-the-database.html  reference-keys.txt  search_index.json  trait-data.html  working-with-gbif-data-outside-of-pladias.html
scripts/: 01_packages.R  0_common.R
