[tool.poetry]
name = "check-values"
version = "0.1.0"
description = "Kontrola hodnot z Excelu proti PostgreSQL a zápis výsledků zpět do XLSX"
authors = ["Tvé jméno <email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
openpyxl = "^3.1.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
